--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "APIs for E-Commers Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "type": "module",
   "repository": {
@@ -19,8 +20,12 @@
   "homepage": "https://github.com/Nilesh-Patil0310/E-Commers-APIs#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
+    "swagger-ui-express": "^5.0.0"
   }
 }
